2008-07-09  Johannes Schmid  <jhs@gnome.org>

	* plugins/language-support-cpp-java/cpp-java-assist.c
	(cpp_java_assist_create_word_completion_cache),
	(cpp_java_assist_check):
	* plugins/symbol-db/plugin.c (symbol_db_activate):
	Show all completions even when the editor makes own suggestions

2008-07-09  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/anjuta-preferences.c (get_property_value_as_string):
	Get the file path from the file-chooser instead of the ui
	
	* plugins/symbol-db/anjuta-symbol-db.glade:
	* plugins/symbol-db/plugin.c (symbol_db_activate):
	* plugins/symbol-db/symbol-db-engine.c (sdb_engine_scan_files_1),
	(symbol_db_engine_new):
	* plugins/symbol-db/symbol-db-engine.h:
	Fixed symbol-db prefs
	
	* scripts/glade2schema.pl:
	Support for "folder" and "file" preferences
	
	* configure.in: Require latest libgda-4.0

2008-07-07  Massimo Cora'  <maxcvs@email.it>

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/symbol-db/plugin.c (isymbol_manager_search):
	* plugins/symbol-db/symbol-db-engine.c
	(symbol_db_engine_get_class_parents_by_symbol_id),
	(symbol_db_engine_get_class_parents),
	(symbol_db_engine_get_scope_members_by_symbol_id),
	(symbol_db_engine_get_scope_members),
	(symbol_db_engine_get_current_scope),
	(symbol_db_engine_get_file_symbols),
	(symbol_db_engine_find_symbol_by_name_pattern),
	(symbol_db_engine_find_symbol_by_name_pattern_filtered):
	fixed global search. There were some bitwise problems in IAnjutaSymbolManager 
	interface.

2008-07-07  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/libanjuta-1.0.vapi:
	Added missing file
	
2008-07-07  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-db/plugin.c:
	Fixed a double-free

2008-07-07  Massimo Cora'  <maxcvs@email.it>

	* plugins/language-support-cpp-java/cpp-java-assist.c
	(cpp_java_assist_create_word_completion_cache):
	added some debugging info.

	* plugins/symbol-db/plugin.c (on_project_root_added),
	(isymbol_manager_search):
	* plugins/symbol-db/symbol-db-engine.c