@@ -1,3 +1,9 @@
+2008-07-10  Johannes Schmid  <jhs@gnome.org>
+
+	Patch from Yuriy Penkin
+	* plugins/search/search-replace.c (search_and_replace):
+	#541941 – Crash on searching with regular expression
+
 2008-07-09  Johannes Schmid  <jhs@gnome.org>
 
 	* plugins/language-support-cpp-java/cpp-java-assist.c
